<resources>
    <string name="app_name">HungerBellsServer</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_category">Categories</string>
    <string name="menu_food_list">Food List</string>
    <string name="category_nameString">Category Name</string>
    <string name="food_priceString">Food Price</string>
    <string name="food_nameString">Food Name</string>
    <string name="food_descriptionString">Food Description</string>
    <string name="addon_size_nameString">Addon/Size Name</string>
    <string name="addon_size_priceString">Addon/Size Price</string>
    <string name="createString">Create</string>
    <string name="editString">Edit</string>
    <string name="size_nameString">Size Name</string>
    <string name="priceString">$1</string>
    <string name="saveString">Save</string>
    <string name="searchStrings">Search</string>
    <string name="ordersStrings">Orders</string>
    <string name="sign_outString">Sign out</string>
    <string name="nameString">Name</string>
    <string name="order_dateString">Order date: 02/10/2020 13:07:09</string>
    <string name="order_numberString">Order Number</string>
    <string name="name_deepString">Name: Deep</string>
    <string name="order_status_placedString">Order Status: Placed</string>
    <string name="number_of_items_String">Number of items: 10</string>
    <string name="filterString">Filter</string>
    <string name="placedString">Placed</string>
    <string name="shippingString">Shipping</string>
    <string name="shippedString">Shipped</string>
    <string name="cancelledString">Cancelled</string>
    <string name="order_0String">Order (0)</string>
    <string name="update_orderString">Update Order</string>
    <string name="update_order_statusString">Update Order Status</string>
    <string name="status_placedString">Status: Placed</string>
    <string name="hString">H</string>
    <string name="cancelString">Cancel</string>
    <string name="okString">OK</string>
    <string name="restore_placedString">Restore Placed</string>
    <string name="deleteString">Delete</string>
    <string name="shipper_01String">Shipper 01</string>
    <string name="_1_8888888888String">+1 8888888888</string>
    <string name="shippersString">Shippers</string>
    <string name="quantity_1String">Quantity: 1</string>
    <string name="order_detailString">Order Detail</string>
    <string name="size_defaultString">Size: Medium</string>
    <string name="addon_defaultString">Addon: Default</string>
    <string name="title_activity_tracking_order">Map</string>
    <string name="news_feedString">News Feed</string>
</resources>