<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_category"
            android:icon="@drawable/ic_restaurant_menu_24"
            android:title="@string/menu_category" />

    </group>

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_news_feed"
            android:icon="@drawable/ic_news_feed_24"
            android:title="@string/news_feedString" />

    </group>

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_order"
            android:icon="@drawable/ic_orders_24"
            android:title="@string/ordersStrings" />
    </group>

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_shipper"
            android:icon="@drawable/ic_shipping_24"
            android:title="@string/shippersString" />
    </group>

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_sign_out"
            android:icon="@drawable/ic_exit_to_app_24"
            android:title="@string/sign_outString" />
    </group>
</menu>