<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:paddingStart="24dp"
    android:paddingTop="8dp"
    android:paddingEnd="24dp"
    android:paddingBottom="8dp"
    android:background="@android:color/white">

    <TextView
        android:id="@+id/txt_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/montserrat"
        android:text="@string/update_orderString"
        android:textColor="@android:color/black"
        android:textSize="32sp" />

    <TextView
        android:id="@+id/txt_title_small"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/montserrat"
        android:text="@string/update_order_statusString"
        android:textColor="@android:color/darker_gray"
        android:textSize="22sp"
        android:layout_below="@+id/txt_title"/>

    <TextView
        android:id="@+id/txt_status"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/montserrat"
        android:text="@string/status_placedString"
        android:textColor="@android:color/darker_gray"
        android:textSize="22sp"
        android:layout_below="@+id/txt_title_small"/>

    <RadioGroup
        android:id="@+id/rdi_group"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/txt_status">

        <RadioButton
            android:id="@+id/rdi_shipped"
            android:checked="true"
            android:fontFamily="@font/montserrat"
            android:textSize="22sp"
            android:text="@string/shippedString"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <RadioButton
            android:id="@+id/rdi_cancelled"
            android:fontFamily="@font/montserrat"
            android:textSize="22sp"
            android:text="@string/cancelledString"
            android:textColor="@android:color/holo_red_dark"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
    </RadioGroup>

    <LinearLayout
        android:id="@+id/layout_button"
        android:layout_below="@+id/rdi_group"
        android:gravity="end"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Button
            android:id="@+id/btn_cancel"
            android:padding="8dp"
            android:text="@string/cancelString"
            android:background="@color/fui_transparent"
            android:textColor="@android:color/darker_gray"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style=""/>

        <Button
            android:id="@+id/btn_ok"
            android:padding="8dp"
            android:text="@string/okString"
            android:background="@color/fui_transparent"
            android:textColor="@android:color/holo_red_dark"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style=""/>
    </LinearLayout>



</RelativeLayout>