<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingTop="16dp"
        android:paddingBottom="16dp"
        android:weightSum="10">

        <ImageView
            android:id="@+id/img_food_image"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="3"
            android:scaleType="fitXY"
            android:contentDescription="@null" />

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_weight="7"
            android:orientation="vertical">

            <TextView
                android:id="@+id/txt_food_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/montserrat"
                android:text="@string/food_nameString"
                android:textColor="@android:color/holo_blue_light"
                android:textSize="16sp"
                android:textStyle="italic" />

            <TextView
                android:id="@+id/txt_food_quantity"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/montserrat"
                android:text="@string/quantity_1String"
                android:textSize="16sp"
                android:textStyle="italic" />

            <TextView
                android:id="@+id/txt_food_add_on"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/montserrat"
                android:text="@string/addon_defaultString"
                android:textSize="16sp"
                android:textStyle="italic" />

            <TextView
                android:id="@+id/txt_size"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/montserrat"
                android:text="@string/size_defaultString"
                android:textSize="16sp"
                android:textStyle="italic" />

        </LinearLayout>


    </LinearLayout>

</androidx.cardview.widget.CardView>