<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="8dp">

        <TextView
            android:id="@+id/placed_filter"
            android:drawablePadding="32dp"
            android:clickable="true"
            android:text="@string/placedString"
            android:textColor="#737373"
            android:textSize="16sp"
            android:layout_gravity="center_vertical"
            android:fontFamily="@font/montserrat"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:drawableStartCompat="@drawable/ic_speaker_notes_24"
            android:foreground="?attr/selectableItemBackground"
            android:paddingStart="8dp"
            android:paddingEnd="8dp"
            android:paddingTop="20dp"
            android:paddingBottom="20dp"
            android:focusable="true" />
        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@android:color/darker_gray">
        </FrameLayout>

        <TextView
            android:id="@+id/shipping_filter"
            android:text="@string/shippingString"
            android:textColor="#737373"
            android:textSize="16sp"
            android:layout_gravity="center_vertical"
            android:fontFamily="@font/montserrat"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:drawablePadding="32dp"
            android:foreground="?attr/selectableItemBackground"
            android:paddingStart="8dp"
            android:paddingEnd="8dp"
            android:paddingTop="20dp"
            android:paddingBottom="20dp"
            android:focusable="true"
            app:drawableStartCompat="@drawable/ic_shipping_24" />
        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@android:color/darker_gray">
        </FrameLayout>

        <TextView
            android:id="@+id/shipped_filter"
            android:text="@string/shippedString"
            android:textColor="#737373"
            android:textSize="16sp"
            android:layout_gravity="center_vertical"
            android:fontFamily="@font/montserrat"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:drawablePadding="32dp"
            android:foreground="?attr/selectableItemBackground"
            android:paddingStart="8dp"
            android:paddingEnd="8dp"
            android:paddingTop="20dp"
            android:paddingBottom="20dp"
            android:focusable="true"
            app:drawableStartCompat="@drawable/ic_done_24" />
        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@android:color/darker_gray">
        </FrameLayout>

        <TextView
            android:id="@+id/cancelled_filter"
            android:text="@string/cancelledString"
            android:textColor="#737373"
            android:textSize="16sp"
            android:layout_gravity="center_vertical"
            android:fontFamily="@font/montserrat"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:drawablePadding="32dp"
            android:foreground="?attr/selectableItemBackground"
            android:paddingStart="8dp"
            android:paddingEnd="8dp"
            android:paddingTop="20dp"
            android:paddingBottom="20dp"
            android:focusable="true"
            app:drawableStartCompat="@drawable/ic_close_24" />

</LinearLayout>